Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-94352

QTabBar's SelectionBehavior QTabBar::SelectPreviousTab does not work as expected

    XMLWordPrintable

Details

    • 5d4b91ea66666f3c8d3c8640b87a33c13dbd0c2c (qt/qtbase/dev) 0d56fd5687b3b6bb747adb919c7d658c6ca1dd27 (qt/qtbase/6.2)

    Description

      Steps to reproduce:
      1. Set a QTabBar SelectionBehavior to QTabBar::SelectPreviousTab
      2. Add four tabs with the first selected.
      3. Select the last tab
      4. Remove the pre to last tab
      5. Remove the last tab

      Actual result:

      • The (never selected) second tab is selected

      Expected result:

      • The first tab is selected

      Attachments

        1. main.cpp
          0.2 kB
          racoon
        2. mainwindow.cpp
          0.8 kB
          racoon
        3. mainwindow.h
          0.3 kB
          racoon
        4. mainwindow.ui
          0.7 kB
          racoon
        For Gerrit Dashboard: QTBUG-94352
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            racoon racoon
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes