Fix QTabBar's SelectPreviousTab behavior

When setCurrentIndex is called by removeTab, the old current index
might no longer be valid. Only update the lastTab value of the new
current tab if the old current index is still valid.

As a drive-by, use the validIndex helper function.

Fixes: QTBUG-94352
Change-Id: I945e2093a90a1fccbba86d32b1113f83fedd41de
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 5d4b91ea66666f3c8d3c8640b87a33c13dbd0c2c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>